cluster/apps/homeassistant/bits.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
---
apiVersion: v1
kind: Service
metadata:
  name: ha-service
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-auth-ingress
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: "hass.${SECRET_INTERNAL_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ha-service
                port:
                  name: http
    - host: "hass.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /auth
            backend:
              service:
                name: ha-service
                port:
                  name: http
  tls:
    - hosts:
        - "hass.${SECRET_INTERNAL_DOMAIN}"
        - "hass.${SECRET_DOMAIN}"
      secretName: ha-int-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-general-ingress
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "home.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: "hass.${SECRET_DOMAIN}."
spec:
  ingressClassName: traefik
  rules:
    - host: "hass.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ha-service
                port:
                  name: http
    - host: "hass.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Exact
            path: /auth/token
            backend:
              service:
                name: ha-service
                port:
                  name: http
  tls:
    - hosts:
        - "hass.${SECRET_DOMAIN}"
      secretName: ha-ext-tls
